# qutenote

./: .gitignore  CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  backupsettingspage.cpp  backupsettingspage.h  colorpicker.cpp  colorpicker.h  colorpicker_touch.cpp  colorpicker_touch.h  colorpickertouchhandler.cpp  colorpickertouchhandler.h  componentbase.cpp  componentbase.h  documentlist.cpp  documentlist.h  documentmodel.cpp  documentmodel.h  filebrowser.cpp  filebrowser.h  filebrowser_touch.cpp  filebrowserdividerdelegate.cpp  filebrowserdividerdelegate.h  filebrowsertouchhandler.cpp  filebrowsertouchhandler.h  filebrowsertreewidget.cpp  filebrowsertreewidget.h  filewatcherguard.cpp  filewatcherguard.h  global_rules.md  huesatmap.cpp  huesatmap.h  huesatmapcache.cpp  huesatmapcache.h  lazydocumentmodel.cpp  lazydocumentmodel.h  licensesettingspage.cpp  licensesettingspage.h  main.cpp  (+35 more)
